# SP-BAND

./: LICENSE  README.md  environment.yml  pyproject.toml
SPBAND/: parameterize_spectra.py
notebooks/: 1.0.0-SP-BAND-Demonstration.ipynb
